--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,7 @@ body {
 
 #main-header {
 	min-height: 100vh;
-	// background: url('/images/showcase-image-1.jpg') no-repeat center;
+	background: url('/images/showcase-image-1.jpg') no-repeat center;
 	background-size: cover;
 	color: $light-color;
 }
