--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,11 +7,15 @@ body {
 	font-size: 1rem;
 }
 
-#main-header {
+.main-header {
 	min-height: 100vh;
-	background: url('/images/showcase-image-1.jpg') no-repeat center;
-	background-size: cover;
 	color: $light-color;
+	background-image: url('/images/showcase-image-1.jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	opacity: 1;
+	transition: opacity 1s ease-in-out;
 }
 
 #main-nav {
@@ -41,7 +45,7 @@ body {
 	}
 }
 
-#slider-section {
+.slider-section {
 	height: 80vh;
 	display: flex;
 	flex-direction: column;
@@ -115,7 +119,5 @@ body {
 	&:hover {
 		opacity: 1;
 		cursor: pointer;
-		width: 50px;
-		height: 50px;
 	}
 }
