--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,6 +43,11 @@ body {
 		text-transform: uppercase;
 		font-size: 1rem;
 	}
+
+	a {
+		color: inherit;
+		text-decoration: none;
+	}
 }
 
 .slider-section {
