Added style to markup

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,4 @@
-$font-family: 'Open Sans', sans-serif;
+$primaryFont: 'Nunito', sans-serif;
+$secondayFont: 'Raleway', sans-serif;
 $primary-color: #cf7e00;
 $light-color: #fff;
