--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -6,14 +6,7 @@
 	position: relative;
 
 	&::before {
-		content: '';
-		display: block;
-		padding: 0.1em 5em;
-		background-color: $primary-color;
-		position: absolute;
-		top: 0;
-		left: 50%;
-		transform: translateX(-50%);
+		@include separator;
 	}
 
 	h3 {
