--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -52,8 +52,9 @@
 	}
 
 	h1 {
+		margin: 0;
 		text-transform: uppercase;
-		font-size: 5rem;
+		font-size: 3.5rem;
 		letter-spacing: 0.01em;
 	}
 
