--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,14 +1,3 @@
-@media (max-width: 1285px) {
-	footer {
-		padding: 1em;
-		gap: 0;
-
-		.footer-item {
-			padding: 1em;
-		}
-	}
-}
-
 @media (max-width: 1080px) {
 	#about-section img {
 		max-width: 500px;
@@ -34,6 +23,9 @@
 }
 
 @media (max-width: 1024px) {
+	#main-nav {
+		font-size: 0.5rem;
+	}
 	#coffee-build {
 		font-size: 0.9rem;
 
@@ -42,6 +34,100 @@
 				max-width: 60px;
 				height: 60px;
 			}
+		}
+	}
+
+	#main-nav {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.slider-section h1 {
+		font-size: 2.5rem;
+	}
+}
+
+@media (max-width: 900px) {
+	#main-nav {
+		background-color: #fff;
+		height: 100px;
+
+		.icon {
+			margin: auto;
+			font-weight: 600;
+			color: #333;
+		}
+
+		ul {
+			display: none;
+		}
+
+		.toggle-bar {
+			display: block;
+		}
+	}
+
+	.arrow {
+		width: 15px;
+		height: 15px;
+	}
+
+	#coffee-build {
+		.grid {
+			grid-template-areas: "image image image image" "left left right right";
+			row-gap: 25px;
+		}
+
+		.grid-center {
+			justify-self: center;
+		}
+	}
+
+	#about-section img {
+		display: none;
+	}
+
+	.gallery {
+		.one {
+			grid-column: 1/7;
+		}
+
+		.two {
+			grid-column: 7/-1;
+		}
+
+		.three {
+			grid-column: 1/7;
+		}
+
+		.four {
+			grid-column: 7/-1;
+		}
+	}
+
+	#opening-hours-reservation {
+		display: block;
+		height: auto;
+		max-width: 700px;
+		width: 100%;
+		margin: 0 auto;
+
+		.reservation-hours {
+			margin-top: 1em;
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.arrow {
+		display: none;
+	}
+
+	.slider-section {
+		padding: 0 2em;
+
+		h1 {
+			font-size: 2rem;
 		}
 	}
 }
