Site is fully responsive

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -14,7 +14,7 @@ footer {
 	padding: 0 2em;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-	gap: 30px;
+	column-gap: 30px;
 	text-align: center;
 
 	form {
