Added responsive navbar

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-	background: url('/images/footer.jpg') no-repeat top center;
+	background: url('../images/footer.jpg') no-repeat top center;
 	color: #fff;
 	min-height: 35vh;
 	display: flex;
