--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,7 +40,7 @@ h3 {
 
 	.grid {
 		display: grid;
-		grid-template-areas: 'left image image right' 'left image image right';
+		grid-template-areas: "left image image right" "left image image right";
 		padding: 1em 4em;
 	}
 
