--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,3 +1,26 @@
+// Mobile navbar style
+#main-nav.toggle {
+	ul {
+		opacity: 1;
+	}
+}
+
+.toggle-bar.toggle {
+	div:nth-of-type(1) {
+		transform: rotateZ(45deg);
+		transition: transform 0.5s ease-in-out;
+	}
+
+	div:nth-of-type(2) {
+		transform: rotateZ(-45deg) translate(5px, -5px);
+		transition: transform 0.5s ease-in-out;
+	}
+
+	div:nth-of-type(3) {
+		opacity: 0;
+		transition: display 0.5s ease-in-out;
+	}
+}
 @media (max-width: 1080px) {
 	#about-section img {
 		max-width: 500px;
@@ -52,14 +75,26 @@
 		background-color: #fff;
 		height: 100px;
 
+		ul {
+			position: absolute;
+			top: 100%;
+			display: block;
+			background-color: #fff;
+			color: #000;
+			width: 100%;
+			margin: 0;
+			opacity: 0;
+		}
+
+		li {
+			text-align: center;
+			padding: 0.5em 0;
+		}
+
 		.icon {
 			margin: auto;
 			font-weight: 600;
 			color: #333;
-		}
-
-		ul {
-			display: none;
 		}
 
 		.toggle-bar {
