--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -9,7 +9,7 @@
 	transition: opacity 1s ease-in-out;
 }
 
-#main-nav {
+.main-nav {
 	height: 80px;
 	width: 100%;
 	display: flex;
@@ -39,6 +39,10 @@
 
 	a {
 		color: inherit;
+
+		&.menu-active {
+			border-bottom: 1.5px solid #fff;
+		}
 	}
 }
 
@@ -56,7 +60,7 @@
 		height: 5px;
 		margin: 0.5em;
 		border-radius: 10px;
-		transition: all 0.5s ease-in-out;
+		transition: all 0.3s ease-in-out;
 	}
 }
 
