--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,5 +1,5 @@
 // Mobile navbar style
-#main-nav.toggle {
+.main-nav.toggle {
 	ul {
 		opacity: 1;
 	}
@@ -26,7 +26,7 @@
 		max-width: 500px;
 	}
 
-	.gallery {
+	#gallery {
 		grid-template-rows: 250px 250px;
 	}
 
@@ -46,7 +46,7 @@
 }
 
 @media (max-width: 1024px) {
-	#main-nav {
+	.main-nav {
 		font-size: 0.5rem;
 	}
 	#coffee-build {
@@ -60,7 +60,7 @@
 		}
 	}
 
-	#main-nav {
+	.main-nav {
 		display: flex;
 		flex-direction: column;
 	}
@@ -71,7 +71,7 @@
 }
 
 @media (max-width: 900px) {
-	#main-nav {
+	.main-nav {
 		background-color: #fff;
 		height: 100px;
 
@@ -122,7 +122,7 @@
 		display: none;
 	}
 
-	.gallery {
+	#gallery {
 		.one {
 			grid-column: 1/7;
 		}
@@ -176,7 +176,7 @@
 		max-width: 300px;
 	}
 
-	.gallery {
+	#gallery {
 		padding: 0 2em;
 		display: block;
 
@@ -233,7 +233,7 @@
 }
 
 @media (max-width: 420px) {
-	#main-nav .icon {
+	.main-nav .icon {
 		font-size: 1rem;
 	}
 
